--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ansible/external/ansible"]
-	path = ansible/external/ansible
+	path = external/ansible
 	url = git@github.com:kakwa/ansible.git
