--- a/openbsd-kakwa.yml
+++ b/openbsd-kakwa.yml
@@ -1,10 +1,25 @@
 ---
+# Bootstrap: install Python so Ansible can run (OpenBSD has no Python in base)
+- name: Bootstrap OpenBSD – install python3
+  hosts: all
+  gather_facts: false
+  tasks:
+    - name: Install python3 (OpenBSD pkg_add from pkg_info -aQ)
+      ansible.builtin.raw: doas pkg_add -i $(pkg_info -aQ python | grep python-3)
+      register: bootstrap_out
+      changed_when: "'Installing' in bootstrap_out.stdout or 'Signatures' in bootstrap_out.stdout"
+      failed_when: false
+
 - name: OpenBSD Server Setup
   hosts: all
   become: true
+  become_method: doas
   roles:
     - { role: os-release, tags: ["system", "os-release"] }
     - { role: vim, tags: ["system", "vim"] }
     - { role: zsh, tags: ["system", "zsh"] }
     - { role: openbsd-misc-packages, tags: ["system", "openbsd-misc-packages"] }
     - { role: openbsd-misc, tags: ["system", "openbsd-misc"] }
+#    - { role: openbsd-named, tags: ["dns", "openbsd-named"] }
+#    - { role: openbsd-ldap, tags: ["ldap", "openbsd-ldap"] }
+#    - { role: openbsd-ldapcherry, tags: ["ldap", "openbsd-ldapcherry"] }
