--- a/roles/openbsd-named/defaults/main.yml
+++ b/roles/openbsd-named/defaults/main.yml
@@ -1,28 +1,20 @@
 ---
-# Internal DNS (BIND + DnsCherry) – defaults
-# Zone and TSIG for dynamic updates (e.g. DnsCherry)
+# Internal DNS – NSD (OpenBSD)
 
+# Zone (used in zone files and DnsCherry config)
 internal_dns_zone: "int.kakwalab.ovh"
+# TSIG (DnsCherry; NSD has no dynamic updates, so key is placeholder if DnsCherry is used)
 internal_dns_tsig_key_name: "dnscherry-update"
 internal_dns_tsig_algorithm: "hmac-sha256"
-
-# BIND (named) – OpenBSD paths and ownership
-internal_dns_named_conf: "/var/named/etc/named.conf"
-internal_dns_named_workdir: "/var/named"
-internal_dns_zone_dir: "/var/named/etc"
-internal_dns_tsig_secret_file: "{{ internal_dns_zone_dir }}/.tsig_secret"
-internal_dns_named_group: "wheel"  # OpenBSD named often runs as root; use wheel for file group
+internal_dns_tsig_secret_b64: ""
 
 # Listen: empty = all; or list of IPs
 internal_dns_listen: []
-# Forwarders (e.g. for relay): list of IPs
-internal_dns_forwarders: []
 
 # DnsCherry (installed in a virtualenv)
 internal_dns_dnscherry_venv: "/var/dnscherry/venv"
 internal_dns_dnscherry_listen_host: "127.0.0.1"
 internal_dns_dnscherry_listen_port: 8080
-internal_dns_dnscherry_install_method: "pip"  # pip | git
 internal_dns_dnscherry_git_url: "https://github.com/kakwa/dnscherry.git"
 # Auth: none | htpasswd
 internal_dns_dnscherry_auth: "none"
@@ -36,3 +28,20 @@ internal_dns_soa_refresh: "86400"
 internal_dns_soa_retry: "7200"
 internal_dns_soa_expire: "3600000"
 internal_dns_soa_ttl: "3600"
+
+# Optional parent zone (e.g. kakwalab.ovh) for static records like sun.kakwalab.ovh
+internal_dns_parent_zone: "kakwalab.ovh"
+internal_dns_parent_zone_ttl: "3600"
+internal_dns_parent_zone_ns: "ns1.int.kakwalab.ovh"
+internal_dns_parent_zone_hostmaster: "hostmaster.int.kakwalab.ovh"
+# Static A record names in parent zone (all get ansible_default_ipv4.address)
+internal_dns_parent_zone_records:
+  - sun
+
+# NSD – OpenBSD (base or package)
+# NSD is in base (/usr/sbin/nsd, default config /var/nsd/etc/nsd.conf). Set package name only if using a port.
+internal_dns_nsd_package: ""
+internal_dns_nsd_conf: "/var/nsd/etc/nsd.conf"
+internal_dns_nsd_conf_dir: "/var/nsd/etc"
+internal_dns_nsd_zone_dir: "/var/nsd/zones"
+internal_dns_nsd_run_dir: "/var/nsd/run"
