--- a/roles/openbsd-ldapcherry/defaults/main.yml
+++ b/roles/openbsd-ldapcherry/defaults/main.yml
@@ -1,9 +1,10 @@
 ---
 # LdapCherry: Web UI for LDAP (use after openldap role; same base DN and TLS)
-# OpenBSD only; installed in a virtualenv.
+# OpenBSD only; installed in a virtualenv from git.
 
 # Virtualenv path (templates/static path is discovered from the venv)
 ldapcherry_venv_dir: "/var/ldapcherry/venv"
+ldapcherry_git_url: "https://github.com/kakwa/ldapcherry.git"
 
 # LDAP connection: use ldaps (openldap role provides TLS)
 ldapcherry_ldap_uri: "ldaps://localhost:636"
