--- a/roles/openbsd-named/tasks/main.yml
+++ b/roles/openbsd-named/tasks/main.yml
@@ -1,89 +1,115 @@
 ---
-# Internal DNS: BIND (named) + zone with TSIG + DnsCherry
-- name: Ensure TSIG secret exists (generate or read)
-  block:
-    - name: Stat TSIG secret file
-      ansible.builtin.stat:
-        path: "{{ internal_dns_tsig_secret_file }}"
-      register: _tsig_secret_stat
+# Internal DNS: NSD (OpenBSD) + optional DnsCherry
+# Tag "named" = NSD; tag "dnscherry" = DnsCherry only; tag "dns" = both
 
-    - name: Generate and store TSIG secret
-      ansible.builtin.copy:
-        dest: "{{ internal_dns_tsig_secret_file }}"
-        content: "{{ lookup('password', '/dev/null length=32 chars=ascii_letters,digits') | b64encode }}"
-        mode: "0600"
-        owner: root
-        group: "{{ internal_dns_named_group }}"
-      when: not _tsig_secret_stat.stat.exists
+# --- NSD (OpenBSD) ---
+- name: Resolve NSD package name (OpenBSD)
+  ansible.builtin.shell: "pkg_info -aQ nsd 2>/dev/null | grep -E '^nsd(-|$)' | head -1"
+  register: _nsd_pkg_query
+  changed_when: false
+  failed_when: false
+  when: ansible_facts.os_family == "OpenBSD"
+  tags: named
 
-    - name: Read TSIG secret into fact
-      ansible.builtin.slurp:
-        src: "{{ internal_dns_tsig_secret_file }}"
-      register: _tsig_secret_slurp
-
-    - name: Set internal_dns_tsig_secret_b64 fact
-      ansible.builtin.set_fact:
-        internal_dns_tsig_secret_b64: "{{ _tsig_secret_slurp.content | b64decode }}"
-  when: ansible_os_family == "OpenBSD"
-
-- name: Install BIND (OpenBSD)
+- name: Install NSD (OpenBSD)
   community.general.openbsd_pkg:
-    name: bind
+    name: "{{ (internal_dns_nsd_package | length > 0) | ternary(internal_dns_nsd_package, _nsd_pkg_query.stdout | trim) }}"
     state: present
-  when: ansible_os_family == "OpenBSD"
+  when: >
+    ansible_facts.os_family == "OpenBSD"
+    and ((internal_dns_nsd_package | length > 0) or (_nsd_pkg_query.stdout | trim | length > 0))
+  tags: named
 
-- name: Ensure BIND zone directory and permissions
+- name: Ensure NSD directories
   ansible.builtin.file:
-    path: "{{ internal_dns_zone_dir }}"
+    path: "{{ item.path }}"
     state: directory
     owner: root
-    group: "{{ internal_dns_named_group }}"
-    mode: "0750"
-  when: ansible_os_family == "OpenBSD"
+    group: _nsd
+    mode: "{{ item.mode }}"
+  loop:
+    - { path: "{{ internal_dns_nsd_conf_dir }}", mode: "0750" }
+    - { path: "{{ internal_dns_nsd_zone_dir }}", mode: "0750" }
+    - { path: "{{ internal_dns_nsd_run_dir }}", mode: "0770" }
+  when: ansible_facts.os_family == "OpenBSD"
+  tags: named
 
-- name: Deploy TSIG key file for named
-  ansible.builtin.copy:
-    dest: "{{ internal_dns_zone_dir }}/tsig.key"
-    content: |
-      key "{{ internal_dns_tsig_key_name }}" {
-          algorithm {{ internal_dns_tsig_algorithm }};
-          secret "{{ internal_dns_tsig_secret_b64 }}";
-      };
-    mode: "0640"
-    owner: root
-    group: "{{ internal_dns_named_group }}"
-  when: ansible_os_family == "OpenBSD"
-  notify: Reload named
-
-- name: Deploy named.conf
+- name: Deploy NSD config
   ansible.builtin.template:
-    src: named.conf.j2
-    dest: "{{ internal_dns_named_conf }}"
+    src: nsd.conf.j2
+    dest: "{{ internal_dns_nsd_conf }}"
     owner: root
-    group: "{{ internal_dns_named_group }}"
+    group: _nsd
     mode: "0640"
-  when: ansible_os_family == "OpenBSD"
-  notify: Reload named
+  when: ansible_facts.os_family == "OpenBSD"
+  tags: named
+  notify: Reload nsd
 
-- name: Deploy zone file for int.kakwalab.ovh
+- name: Deploy zone file for {{ internal_dns_zone }} (NSD)
   ansible.builtin.template:
     src: zone-master.j2
-    dest: "{{ internal_dns_zone_dir }}/db.{{ internal_dns_zone }}"
+    dest: "{{ internal_dns_nsd_zone_dir }}/db.{{ internal_dns_zone }}"
     owner: root
-    group: "{{ internal_dns_named_group }}"
+    group: _nsd
     mode: "0640"
-  when: ansible_os_family == "OpenBSD"
-  notify: Reload named
+  when: ansible_facts.os_family == "OpenBSD"
+  tags: named
+  notify: Reload nsd
 
-- name: Enable and start named (OpenBSD)
+- name: Deploy parent zone file (NSD)
+  ansible.builtin.template:
+    src: zone-parent.j2
+    dest: "{{ internal_dns_nsd_zone_dir }}/db.{{ internal_dns_parent_zone }}"
+    owner: root
+    group: _nsd
+    mode: "0640"
+  when: >
+    ansible_facts.os_family == "OpenBSD"
+    and internal_dns_parent_zone_records is defined
+    and internal_dns_parent_zone_records | length > 0
+  tags: named
+  notify: Reload nsd
+
+- name: Stat NSD control key (for idempotent setup)
+  ansible.builtin.stat:
+    path: "{{ internal_dns_nsd_conf_dir }}/nsd_control.key"
+  register: _nsd_control_key_stat
+  when: ansible_facts.os_family == "OpenBSD"
+  tags: named
+
+- name: Create NSD control keys (nsd-control-setup) if missing
+  ansible.builtin.command:
+    cmd: "nsd-control-setup -d {{ internal_dns_nsd_conf_dir }}"
+  when: >
+    ansible_facts.os_family == "OpenBSD"
+    and not _nsd_control_key_stat.stat.exists | default(false)
+  tags: named
+
+- name: Stop and disable unbound (free port 53 for NSD)
   ansible.builtin.service:
-    name: named
+    name: unbound
+    state: stopped
+    enabled: false
+  when: ansible_facts.os_family == "OpenBSD"
+  tags: named
+
+- name: Enable and start NSD (OpenBSD)
+  ansible.builtin.service:
+    name: nsd
     state: started
     enabled: true
-  when: ansible_os_family == "OpenBSD"
+  when: ansible_facts.os_family == "OpenBSD"
+  tags: named
+
+- name: Rebuild NSD zone database
+  ansible.builtin.command:
+    cmd: "nsd-control rebuild"
+  when: ansible_facts.os_family == "OpenBSD"
+  tags: named
 
 # --- DnsCherry (virtualenv) ---
 - name: Ensure DnsCherry dirs and user
+  tags: dnscherry
   block:
     - name: Create _dnscherry user (OpenBSD)
       ansible.builtin.user:
@@ -91,7 +117,7 @@
         system: true
         shell: /usr/sbin/nologin
         create_home: false
-      when: ansible_os_family == "OpenBSD"
+      when: ansible_facts.os_family == "OpenBSD"
 
     - name: Ensure /etc/dnscherry
       ansible.builtin.file:
@@ -116,38 +142,33 @@
         owner: _dnscherry
         group: _dnscherry
         mode: "0750"
-  when: ansible_os_family == "OpenBSD"
+  when: ansible_facts.os_family == "OpenBSD"
 
 - name: Create DnsCherry virtualenv
+  tags: dnscherry
   ansible.builtin.command:
     cmd: "{{ ansible_python.executable }} -m venv {{ internal_dns_dnscherry_venv }}"
     creates: "{{ internal_dns_dnscherry_venv }}/bin/python"
-  when: ansible_os_family == "OpenBSD"
-
-- name: Install DnsCherry via pip (virtualenv)
-  ansible.builtin.pip:
-    name:
-      - dnscherry
-      - passlib
-    state: present
-    virtualenv: "{{ internal_dns_dnscherry_venv }}"
-  when: ansible_os_family == "OpenBSD" and internal_dns_dnscherry_install_method == "pip"
+  when: ansible_facts.os_family == "OpenBSD"
 
 - name: Install DnsCherry from git (virtualenv)
+  tags: dnscherry
   ansible.builtin.pip:
     name: "git+{{ internal_dns_dnscherry_git_url }}"
     state: present
     virtualenv: "{{ internal_dns_dnscherry_venv }}"
-  when: ansible_os_family == "OpenBSD" and internal_dns_dnscherry_install_method == "git"
+  when: ansible_facts.os_family == "OpenBSD"
 
 - name: Install passlib for DnsCherry htpasswd auth (virtualenv)
+  tags: dnscherry
   ansible.builtin.pip:
     name: passlib
     state: present
     virtualenv: "{{ internal_dns_dnscherry_venv }}"
-  when: ansible_os_family == "OpenBSD" and internal_dns_dnscherry_auth == "htpasswd"
+  when: ansible_facts.os_family == "OpenBSD" and internal_dns_dnscherry_auth == "htpasswd"
 
 - name: Deploy DnsCherry config
+  tags: dnscherry
   ansible.builtin.template:
     src: dnscherry.ini.j2
     dest: /etc/dnscherry/dnscherry.ini
@@ -157,18 +178,20 @@
   notify: Restart DnsCherry
 
 - name: Install DnsCherry rc.d script (OpenBSD)
+  tags: dnscherry
   ansible.builtin.template:
     src: dnscherry.rc.j2
     dest: /etc/rc.d/dnscherry
     owner: root
     group: wheel
     mode: "0755"
-  when: ansible_os_family == "OpenBSD"
+  when: ansible_facts.os_family == "OpenBSD"
   notify: Restart DnsCherry
 
 - name: Enable and start DnsCherry (OpenBSD)
+  tags: dnscherry
   ansible.builtin.service:
     name: dnscherry
     state: started
     enabled: true
-  when: ansible_os_family == "OpenBSD"
+  when: ansible_facts.os_family == "OpenBSD"
