--- a/roles/os-release/tasks/main.yml
+++ b/roles/os-release/tasks/main.yml
@@ -5,4 +5,4 @@
     owner: root
     group: wheel
     mode: '0644'
-  when: ansible_os_family == "NetBSD" or ansible_os_family == "OpenBSD"
+  when: ansible_facts['os_family'] == "NetBSD" or ansible_facts['os_family'] == "OpenBSD"
