clean-up and renaming

--- a/openbsd-kakwa.yml
+++ b/openbsd-kakwa.yml
@@ -20,7 +20,7 @@
     - { role: zsh, tags: ["system", "zsh"] }
     - { role: openbsd-misc-packages, tags: ["system", "openbsd-misc-packages"] }
     - { role: openbsd-misc, tags: ["system", "openbsd-misc"] }
-    - { role: openbsd-named, tags: ["dns", "openbsd-named", "named", "dnscherry"] }
+    - { role: openbsd-dns, tags: ["dns", "openbsd-dns", "nsd", "dnscherry"] }
     - { role: openbsd-nginx, tags: ["nginx", "web", "openbsd-nginx"] }
     - { role: openbsd-openldap, tags: ["ldap", "openbsd-openldap"] }
     - { role: openbsd-ldapcherry, tags: ["ldap", "openbsd-ldapcherry"] }
