--- a/roles/openbsd-dns/handlers/main.yml
+++ b/roles/openbsd-dns/handlers/main.yml
@@ -5,6 +5,12 @@
     state: reloaded
   when: ansible_facts.os_family == "OpenBSD"
 
+- name: Reload unbound
+  ansible.builtin.service:
+    name: unbound
+    state: reloaded
+  when: ansible_facts.os_family == "OpenBSD"
+
 - name: Restart DnsCherry
   ansible.builtin.service:
     name: dnscherry
