--- a/roles/openbsd-dns/tasks/main.yml
+++ b/roles/openbsd-dns/tasks/main.yml
@@ -1,49 +1,58 @@
 ---
-# Internal DNS: NSD (OpenBSD) + optional DnsCherry
-# Tag "named" = NSD; tag "dnscherry" = DnsCherry only; tag "dns" = both
+# Internal DNS: Knot DNS (OpenBSD)
+# Tag "named" = Knot DNS; tag "dns" = both
 
-# --- NSD (OpenBSD) ---
-- name: Resolve NSD package name (OpenBSD)
-  ansible.builtin.shell: "pkg_info -aQ nsd 2>/dev/null | grep -E '^nsd(-|$)' | head -1"
-  register: _nsd_pkg_query
-  changed_when: false
+# --- Knot DNS (OpenBSD) ---
+- name: Stop and disable NSD (migrating to Knot)
+  ansible.builtin.service:
+    name: nsd
+    state: stopped
+    enabled: false
+  when: ansible_facts.os_family == "OpenBSD"
   failed_when: false
+  tags: named
+
+- name: Stop and disable BIND (migrating to Knot)
+  ansible.builtin.service:
+    name: isc_named
+    state: stopped
+    enabled: false
+  when: ansible_facts.os_family == "OpenBSD"
+  failed_when: false
+  tags: named
+
+- name: Install Knot DNS (OpenBSD)
+  community.general.openbsd_pkg:
+    name: "{{ internal_dns_knot_package }}"
+    state: present
   when: ansible_facts.os_family == "OpenBSD"
   tags: named
 
-- name: Install NSD (OpenBSD)
-  community.general.openbsd_pkg:
-    name: "{{ (internal_dns_nsd_package | length > 0) | ternary(internal_dns_nsd_package, _nsd_pkg_query.stdout | trim) }}"
-    state: present
-  when: >
-    ansible_facts.os_family == "OpenBSD"
-    and ((internal_dns_nsd_package | length > 0) or (_nsd_pkg_query.stdout | trim | length > 0))
-  tags: named
-
-- name: Ensure NSD directories
+- name: Ensure Knot directories
   ansible.builtin.file:
     path: "{{ item.path }}"
     state: directory
-    owner: root
-    group: _nsd
+    owner: "{{ item.owner }}"
+    group: "{{ item.group }}"
     mode: "{{ item.mode }}"
   loop:
-    - { path: "{{ internal_dns_nsd_conf_dir }}", mode: "0750" }
-    - { path: "{{ internal_dns_nsd_zone_dir }}", mode: "0750" }
-    - { path: "{{ internal_dns_nsd_run_dir }}", mode: "0770" }
+    - { path: "{{ internal_dns_knot_conf_dir }}", owner: "root", group: "_knot", mode: "0750" }
+    - { path: "{{ internal_dns_knot_zone_dir }}", owner: "_knot", group: "_knot", mode: "0770" }
+    - { path: "{{ internal_dns_knot_storage_dir }}", owner: "_knot", group: "_knot", mode: "0770" }
+    - { path: "/var/run/knot", owner: "_knot", group: "_knot", mode: "0770" }
   when: ansible_facts.os_family == "OpenBSD"
   tags: named
 
-- name: Deploy NSD config
+- name: Deploy Knot config
   ansible.builtin.template:
-    src: nsd.conf.j2
-    dest: "{{ internal_dns_nsd_conf }}"
+    src: knot.conf.j2
+    dest: "{{ internal_dns_knot_conf }}"
     owner: root
-    group: _nsd
+    group: _knot
     mode: "0640"
   when: ansible_facts.os_family == "OpenBSD"
   tags: named
-  notify: Reload nsd
+  notify: Reload knot
 
 - name: Deploy Unbound config
   ansible.builtin.template:
@@ -67,33 +76,18 @@
   tags: named
   notify: Reload unbound
 
-- name: Deploy zone file for {{ internal_dns_zone }} (NSD)
+- name: Deploy zone file for {{ internal_dns_zone }} (Knot)
   ansible.builtin.template:
     src: zone-master.j2
-    dest: "{{ internal_dns_nsd_zone_dir }}/db.{{ internal_dns_zone }}"
-    owner: root
-    group: _nsd
+    dest: "{{ internal_dns_knot_storage_dir }}/{{ internal_dns_zone }}.zone"
+    owner: _knot
+    group: _knot
     mode: "0640"
   when: ansible_facts.os_family == "OpenBSD"
   tags: named
-  notify: Reload nsd
+  notify: Reload knot
 
-- name: Stat NSD control key (for idempotent setup)
-  ansible.builtin.stat:
-    path: "{{ internal_dns_nsd_conf_dir }}/nsd_control.key"
-  register: _nsd_control_key_stat
-  when: ansible_facts.os_family == "OpenBSD"
-  tags: named
-
-- name: Create NSD control keys (nsd-control-setup) if missing
-  ansible.builtin.command:
-    cmd: "nsd-control-setup -d {{ internal_dns_nsd_conf_dir }}"
-  when: >
-    ansible_facts.os_family == "OpenBSD"
-    and not _nsd_control_key_stat.stat.exists | default(false)
-  tags: named
-
-- name: Stop and disable unbound (free port 53 for NSD)
+- name: Enable and start unbound (forward queries to Knot on port 5353)
   ansible.builtin.service:
     name: unbound
     state: started
@@ -101,111 +95,10 @@
   when: ansible_facts.os_family == "OpenBSD"
   tags: named
 
-- name: Enable and start NSD (OpenBSD)
+- name: Enable and start Knot DNS (OpenBSD)
   ansible.builtin.service:
-    name: nsd
+    name: knot
     state: started
     enabled: true
   when: ansible_facts.os_family == "OpenBSD"
   tags: named
-
-# --- DnsCherry (virtualenv) ---
-- name: Ensure DnsCherry dirs and user
-  tags: dnscherry
-  block:
-    - name: Create _dnscherry user (OpenBSD)
-      ansible.builtin.user:
-        name: _dnscherry
-        system: true
-        shell: /usr/sbin/nologin
-        create_home: false
-      when: ansible_facts.os_family == "OpenBSD"
-
-    - name: Ensure /etc/dnscherry
-      ansible.builtin.file:
-        path: /etc/dnscherry
-        state: directory
-        owner: root
-        group: _dnscherry
-        mode: "0750"
-
-    - name: Ensure /opt/dnscherry for venv
-      ansible.builtin.file:
-        path: /opt/dnscherry
-        state: directory
-        owner: root
-        group: wheel
-        mode: "0755"
-
-    - name: Ensure DnsCherry session dir
-      ansible.builtin.file:
-        path: /var/dnscherry/sessions
-        state: directory
-        owner: _dnscherry
-        group: _dnscherry
-        mode: "0750"
-  when: ansible_facts.os_family == "OpenBSD"
-
-- name: Install DnsCherry Python dependencies (OpenBSD)
-  tags: dnscherry
-  community.general.openbsd_pkg:
-    name:
-      - py3-ldap
-      - openldap-client
-      - py3-dnspython
-      - py3-CherryPy
-      - py3-mako
-    state: present
-  when: ansible_facts.os_family == "OpenBSD"
-
-- name: Create DnsCherry virtualenv with system site packages
-  tags: dnscherry
-  ansible.builtin.command:
-    cmd: "{{ ansible_facts['python']['executable'] }} -m venv --system-site-packages {{ internal_dns_dnscherry_venv }}"
-    creates: "{{ internal_dns_dnscherry_venv }}/bin/python"
-  when: ansible_facts.os_family == "OpenBSD"
-
-- name: Install DnsCherry from git (virtualenv)
-  tags: dnscherry
-  ansible.builtin.pip:
-    name: "git+{{ internal_dns_dnscherry_git_url }}"
-    state: present
-    virtualenv: "{{ internal_dns_dnscherry_venv }}"
-  when: ansible_facts.os_family == "OpenBSD"
-
-- name: Install passlib for DnsCherry htpasswd auth (virtualenv)
-  tags: dnscherry
-  ansible.builtin.pip:
-    name: passlib
-    state: present
-    virtualenv: "{{ internal_dns_dnscherry_venv }}"
-  when: ansible_facts.os_family == "OpenBSD" and internal_dns_dnscherry_auth == "htpasswd"
-
-- name: Deploy DnsCherry config
-  tags: dnscherry
-  ansible.builtin.template:
-    src: dnscherry.ini.j2
-    dest: /etc/dnscherry/dnscherry.ini
-    owner: root
-    group: _dnscherry
-    mode: "0640"
-  notify: Restart DnsCherry
-
-- name: Install DnsCherry rc.d script (OpenBSD)
-  tags: dnscherry
-  ansible.builtin.template:
-    src: dnscherry.rc.j2
-    dest: /etc/rc.d/dnscherry
-    owner: root
-    group: wheel
-    mode: "0755"
-  when: ansible_facts.os_family == "OpenBSD"
-  notify: Restart DnsCherry
-
-- name: Enable and start DnsCherry (OpenBSD)
-  tags: dnscherry
-  ansible.builtin.service:
-    name: dnscherry
-    state: started
-    enabled: true
-  when: ansible_facts.os_family == "OpenBSD"
