--- a/roles/openbsd-nginx/tasks/main.yml
+++ b/roles/openbsd-nginx/tasks/main.yml
@@ -4,7 +4,6 @@
   community.general.openbsd_pkg:
     name: nginx
     state: present
-  when: ansible_facts.os_family == "OpenBSD"
 
 - name: Ensure nginx vhosts.d directory
   ansible.builtin.file:
@@ -13,7 +12,6 @@
     mode: "0755"
     owner: root
     group: wheel
-  when: ansible_facts.os_family == "OpenBSD"
 
 # --- LdapCherry vhost (self-signed SSL) ---
 - name: Ensure SSL dir for ldapcherry vhost
@@ -23,7 +21,7 @@
     mode: "0750"
     owner: root
     group: wheel
-  when: ansible_facts.os_family == "OpenBSD" and nginx_ldapcherry_enable | bool
+  when: nginx_ldapcherry_enable | bool
 
 - name: Generate self-signed cert for ldapcherry vhost
   ansible.builtin.command:
@@ -34,7 +32,7 @@
       -out {{ nginx_ldapcherry_ssl_cert }}
       -subj "/CN={{ nginx_ldapcherry_ssl_cn }}"
     creates: "{{ nginx_ldapcherry_ssl_cert }}"
-  when: ansible_facts.os_family == "OpenBSD" and nginx_ldapcherry_enable | bool
+  when: nginx_ldapcherry_enable | bool
 
 - name: Deploy nginx vhost for ldapcherry
   ansible.builtin.template:
@@ -43,7 +41,7 @@
     owner: root
     group: wheel
     mode: "0644"
-  when: ansible_facts.os_family == "OpenBSD" and nginx_ldapcherry_enable | bool
+  when: nginx_ldapcherry_enable | bool
   notify: Reload nginx
 
 # --- DnsCherry vhost (self-signed SSL) ---
@@ -54,7 +52,7 @@
     mode: "0750"
     owner: root
     group: wheel
-  when: ansible_facts.os_family == "OpenBSD" and nginx_dnscherry_enable | bool
+  when: nginx_dnscherry_enable | bool
 
 - name: Generate self-signed cert for dnscherry vhost
   ansible.builtin.command:
@@ -65,7 +63,7 @@
       -out {{ nginx_dnscherry_ssl_cert }}
       -subj "/CN={{ nginx_dnscherry_ssl_cn }}"
     creates: "{{ nginx_dnscherry_ssl_cert }}"
-  when: ansible_facts.os_family == "OpenBSD" and nginx_dnscherry_enable | bool
+  when: nginx_dnscherry_enable | bool
 
 - name: Deploy nginx vhost for dnscherry
   ansible.builtin.template:
@@ -74,7 +72,7 @@
     owner: root
     group: wheel
     mode: "0644"
-  when: ansible_facts.os_family == "OpenBSD" and nginx_dnscherry_enable | bool
+  when: nginx_dnscherry_enable | bool
   notify: Reload nginx
 
 # --- Include vhosts in nginx.conf ---
@@ -84,7 +82,6 @@
     line: "    include vhosts.d/*.conf;"
     insertafter: "mime\\.types"
     regexp: '^\s*include\s+vhosts\.d/\*\.conf\s*;'
-  when: ansible_facts.os_family == "OpenBSD"
   notify: Reload nginx
 
 - name: Enable and start nginx (OpenBSD)
@@ -92,4 +89,3 @@
     name: nginx
     state: started
     enabled: true
-  when: ansible_facts.os_family == "OpenBSD"
