--- a/roles/openbsd-openldap/tasks/main.yml
+++ b/roles/openbsd-openldap/tasks/main.yml
@@ -72,20 +72,13 @@
     replace: "olcRootPW: {{ openldap_admin_password_hash.stdout }}"
   when: not slapd_config_exists.stat.exists
 
-# OpenBSD W^X / mmap: LMDB writemap causes "Operation not permitted". Disable writemap for MDB.
-- name: Disable LMDB writemap in slapd.ldif (OpenBSD compatibility)
-  ansible.builtin.replace:
-    path: /etc/openldap/slapd.ldif
-    regexp: '^olcDbEnvFlags: writemap'
-    replace: 'olcDbEnvFlags: no-writemap'
-  when: not slapd_config_exists.stat.exists
-
-- name: Add olcDbEnvFlags no-writemap to slapd.ldif if missing (OpenBSD compatibility)
+# OpenBSD W^X / mmap: LMDB writemap causes "Operation not permitted". Remove writemap flag (omit = no writemap).
+# OpenLDAP does not support "no-writemap"; omit the attribute to disable writemap.
+- name: Remove olcDbEnvFlags writemap from slapd.ldif (OpenBSD compatibility)
   ansible.builtin.lineinfile:
     path: /etc/openldap/slapd.ldif
-    line: 'olcDbEnvFlags: no-writemap'
-    insertafter: '^olcDbDirectory:'
-    state: present
+    regexp: '^olcDbEnvFlags: (no-)?writemap'
+    state: absent
   when: not slapd_config_exists.stat.exists
 
 - name: Ensure slapd.d config directory exists (required by slapadd -F)
@@ -107,7 +100,19 @@
     group: "{{ openldap_group }}"
     recurse: true
 
-# OpenBSD: patch MDB config in slapd.d so no-writemap is set even when slapd is down (e.g. after writemap crash)
+- name: Check if slapd.conf exists
+  ansible.builtin.stat:
+    path: /etc/openldap/slapd.conf
+  register: slapd_conf_exists
+
+- name: Deploy slapd.conf for CLI tools (slapcat etc.; slapd uses slapd.d at runtime)
+  ansible.builtin.template:
+    src: slapd.conf.j2
+    dest: /etc/openldap/slapd.conf
+    mode: "0600"
+  when: not slapd_conf_exists.stat.exists
+
+# OpenBSD: remove writemap from MDB config in slapd.d when slapd is down (e.g. after writemap crash)
 - name: Find MDB database LDIF in slapd.d
   ansible.builtin.find:
     paths: /etc/openldap/slapd.d
@@ -116,20 +121,11 @@
   register: openldap_mdb_ldif_files
   when: slapd_config_exists.stat.exists
 
-- name: Disable writemap in slapd.d MDB LDIF (replace existing writemap)
-  ansible.builtin.replace:
-    path: "{{ item.path }}"
-    regexp: '^olcDbEnvFlags: writemap'
-    replace: 'olcDbEnvFlags: no-writemap'
-  loop: "{{ openldap_mdb_ldif_files.files | default([]) }}"
-  when: slapd_config_exists.stat.exists and openldap_mdb_ldif_files.matched | default(0) > 0
-
-- name: Add olcDbEnvFlags no-writemap to slapd.d MDB LDIF if missing
+- name: Remove olcDbEnvFlags writemap from slapd.d MDB LDIF (OpenBSD compatibility)
   ansible.builtin.lineinfile:
     path: "{{ item.path }}"
-    line: 'olcDbEnvFlags: no-writemap'
-    insertafter: '^olcDbDirectory:'
-    state: present
+    regexp: '^olcDbEnvFlags: (no-)?writemap'
+    state: absent
   loop: "{{ openldap_mdb_ldif_files.files | default([]) }}"
   when: slapd_config_exists.stat.exists and openldap_mdb_ldif_files.matched | default(0) > 0
 
@@ -239,6 +235,14 @@
 - name: Flush handlers so slapd restarts with ldapi before schema load
   meta: flush_handlers
 
+# Bootstrap from template has no schema include (slapadd rejects include/olcInclude). Load core first.
+- name: Add core schema to cn=config (required when bootstrap LDIF had no schema include)
+  ansible.builtin.command: ldapadd -Y EXTERNAL -H ldapi:/// -f /etc/openldap/schema/core.ldif
+  register: openldap_core_schema_add
+  become: true
+  failed_when: false
+  changed_when: openldap_core_schema_add.rc == 0
+
 # Load OpenSSH LPK schema *before* applying TLS config (olcSecurity/olcLocalSSF),
 # otherwise ldapi EXTERNAL fails with "Confidentiality required"
 - name: Load OpenSSH LPK schema (sshPublicKey) into slapd
@@ -288,25 +292,24 @@
   set_fact:
     openldap_mdb_dn: "{{ ((openldap_mdb_search.stdout | regex_findall('dn:\\s*(.+)')) + ['olcDatabase={1}mdb,cn=config'])[0] if openldap_mdb_search.rc == 0 else 'olcDatabase={1}mdb,cn=config' }}"
 
-# OpenBSD: ensure MDB has no-writemap (existing slapd.d may have been created without it)
-- name: Create LDIF to set olcDbEnvFlags no-writemap on MDB database (OpenBSD)
+# OpenBSD: remove writemap from MDB (existing slapd.d may have writemap set)
+- name: Create LDIF to delete olcDbEnvFlags on MDB database (OpenBSD W^X compatibility)
   ansible.builtin.copy:
     content: |
       dn: {{ openldap_mdb_dn }}
       changetype: modify
-      replace: olcDbEnvFlags
-      olcDbEnvFlags: no-writemap
-    dest: "{{ openldap_ldif_dir }}/mdb-no-writemap.ldif"
+      delete: olcDbEnvFlags
+    dest: "{{ openldap_ldif_dir }}/mdb-remove-writemap.ldif"
     mode: "0600"
   become: true
 
-- name: Set olcDbEnvFlags no-writemap on MDB database (OpenBSD W^X compatibility)
-  ansible.builtin.command: ldapmodify -Y EXTERNAL -H ldapi:/// -f {{ openldap_ldif_dir }}/mdb-no-writemap.ldif
-  register: openldap_mdb_nowritemap
+- name: Remove olcDbEnvFlags from MDB database (OpenBSD W^X compatibility)
+  ansible.builtin.command: ldapmodify -Y EXTERNAL -H ldapi:/// -f {{ openldap_ldif_dir }}/mdb-remove-writemap.ldif
+  register: openldap_mdb_remove_writemap
   become: true
   notify: restart slapd
   failed_when: false
-  changed_when: openldap_mdb_nowritemap.rc == 0
+  changed_when: openldap_mdb_remove_writemap.rc == 0
 
 # memberOf overlay requires the memberof module to be loaded (see https://tylersguides.com/guides/openldap-memberof-overlay/).
 # Without it, ldapadd of the overlay would fail; we load the module so the overlay can be applied.
